...
    'Sculpture',
    'Other',
  ];

  static const mediums = [
    'Acrylic',
    'Oil',
    'Watercolor',
    'Digital',
    'Mixed Media',
    'Spray Paint',
    'Charcoal',
    'Pencil',
...
